# rust-botc-notes

./: Cargo.toml  README.md  rendered.html  results.json  scrapes.db
src/: botc_main.rs  main.rs  models.rs  scraper.rs  storage.rs
