[package]
name = "rustscraper"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rustscraper"
path = "src/main.rs"

[[bin]]
name = "botc"
path = "src/botc_main.rs"

[dependencies]
reqwest        = { version = "0.12", features = ["blocking"] }
scraper        = "0.21"
rusqlite       = { version = "0.31", features = ["bundled"] }
clap           = { version = "4.5", features = ["derive"] }
anyhow         = "1.0"
chrono         = "0.4"
serde          = { version = "1.0", features = ["derive"] }
serde_json     = "1.0"
chromiumoxide  = "0.7"
tokio          = { version = "1", features = ["rt-multi-thread", "time"] }
futures        = "0.3"
